syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "MailData.proto";

// CmdId: 1427
// EnetChannelId: 0
// EnetIsReliable: true
message GetAllMailRsp {
	int32 retcode = 6;
	repeated MailData mail_list = 9;
	bool is_truncated = 5;
	bool ANKKGPJCINB = 7;
}
