syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message EquipParam {
  uint32 item_id = 1;
  uint32 item_num = 2;
  uint32 item_level = 3;
  uint32 promote_level = 4;
}
